use npm instead of yarn for CI/CD

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,24 +9,25 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Read .nvmrc
         id: nvm
         run: echo "NVMRC=$(cat .nvmrc)" >> $GITHUB_ENV
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NVMRC }}
+          cache: npm
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm ci
 
       - name: Build
         env:
           BASE_PATH:
-        run: yarn build
+        run: npm run build
 
       - name: Create CNAME file
         run: cp CNAME out/CNAME
