--- a/package.json
+++ b/package.json
@@ -4,29 +4,22 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@artsy/fresnel": "^6.1.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/lodash.debounce": "^4.0.8",
-    "@types/node": "20.5.1",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "@types/react-modal": "^3.16.2",
-    "autoprefixer": "10.4.15",
+    "@reduxjs/toolkit": "^2.2.3",
+    "autoprefixer": "^10.4.20",
     "classnames": "^2.3.2",
-    "eslint": "^8.2.0",
-    "eslint-config-next": "13.4.19",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^10.16.1",
     "lodash": "^4.17.21",
-    "next": "^13.5.6",
+    "next": "^15.1.0",
     "next-export-i18n": "^2.1.0",
     "next-seo": "^6.1.0",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.49",
     "prettier": "^3.0.2",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -36,14 +29,18 @@
     "react-input-slider": "^6.0.1",
     "react-intersection-observer": "^9.5.2",
     "react-modal-image": "^2.6.0",
-    "react-redux": "^8.1.2",
+    "react-redux": "^9.1.2",
     "react-responsive": "^9.0.2",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/lodash.debounce": "^4.0.8",
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-modal": "^3.16.3",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-howler": "^5.2.0",
@@ -51,7 +48,10 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.0.0",
     "babel-plugin-inline-react-svg": "^2.0.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.0",
     "eslint-config-airbnb-typescript": "17.1.0",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.29.1",
+    "typescript": "^5.6.3"
   }
 }
